--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -10,6 +10,8 @@
     <ul>
         {% for entry in entries %}
             <li><a href="{% url 'wiki' entry %}">{{ entry }}</li>
+        {% empty %}
+            <li>Not found</li>
         {% endfor %}
     </ul>
 
