--- a/encyclopedia/templates/encyclopedia/add.html
+++ b/encyclopedia/templates/encyclopedia/add.html
@@ -2,10 +2,12 @@
 
 {% block body %}
 
+{% if error %}
+<p style="color: red;">{{error}}</p>
+{% endif %}
 <form action="{% url 'add' %}" method="POST">
     {% csrf_token %}
     {{form}}
     <input type="submit" value="Add">
 </form>
-
 {% endblock %}
